2000-11-01  Alex Samuel  <samuel@codesourcery.com>

	* doc/qm.css (a.Dfn): Remove.
	(a.TermDef): Fix background-color.
	(span.Identifier): Recreate.
	(span.Class): Likewise.
	(table): New style.
	(tr.Heading): New class.
	(span.Fixme): Likewise.

	* templates/html: Add Emacs local variables.

2000-10-31  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk (%.html): Fix.
	* doc/process-xhtml.py: Fix href attribute.
	* doc/qm.css (a.TermDef): Fix font-style.
	(div.api): Rename to...
	(div.API): ... this.
	(span.Identifier): New class.
	(span.Class): Likewise.
	
	* doc/design/qmtest/terms.xhtml: New file.
	
2000-10-27  Alex Samuel  <samuel@codesourcery.com>

	* templates/html: Use Open Publication License.
	* doc/design/qmtest/design.html: Likewise.
	* doc/design/qmtrack/index.xhtml: Likewise.
	* doc/design/qmtrack/architecture.xhtml: Likewise.
	* doc/design/qmtrack/requirements.xhtml: Likewise.
	
2000-10-26  Alex Samuel  <samuel@codesourcery.com>

	* doc/process-xhtml.py: Convert to coding standards.
	* doc/qm.css (div.api): New style.
	* templates/html: Remove emacs variable stuff.
	* templates/py: Add emacs variable stuff.
	
2000-10-25  Alex Samuel  <samuel@codesourcery.com>

	* stanard.mk: Add comments.
	(.PHONY): Fix typo.
	(TOPDIR): New variable.
	(XHTMLPROCESS): Likewise.
	($(SUBDIRS)): Pass TOPDIR to child make processes.
	(%.html): Use XHTML processor script.
	* doc/process-xhtml.py: New script.
	* doc/design/qmtrack/GNUmakefile: Use TOPDIR.
	
	* doc/qm.css: Improve comments.
	
2000-10-25  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk: New file.
	* doc/GNUmakefile: Likewise.
	* doc/qm.css: Likewise.
	* doc/design/qmtrack/GNUmakefile: Likewise.
	* templates/html: Update for XHTML.
	
2000-10-24  Alex Samuel  <samuel@codesourcery.com>

	* templates/html (DOCTYPE): Add.

2000-10-24  Alex Samuel  <samuel@codesourcery.com>

	* templates/py: New file.

2000-10-24  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmconfig/...: Import.
