@@ -1,3 +1,10 @@
+2000-11-03  Alex Samuel  <samuel@codesourcery.com>
+
+	* doc/process-xhtml.py (clean_up_term): New function.
+	Use it.  Try to handle pluralized terms.
+	* doc/qm.css (div.XML): New class.
+	(span.Function): Likewise.
+	
 2000-11-01  Alex Samuel  <samuel@codesourcery.com>
 
 	* doc/qm.css (a.Dfn): Remove.
